--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>101 Lexington Court Lot #13, Greeneville, TN 37745 - Lot For Sale</title>
 
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,700italic|Montserrat:700">
-    <link rel="sytlesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
