Fix pdf filename

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li>Driveway and paved parking in place</li>
           <li>Underground utilities</li>
           <li>Numerous mature trees are around the perimeter</li>
-          <li>Lot is restricted by <a href="Shiloh_View_CCR_Sales.pdf">Covenants, Condiditons, and Restrictions</a></li>
+          <li>Lot is restricted by <a href="ShilohViewCCRSales.pdf">Covenants, Condiditons, and Restrictions</a></li>
           <li>Convenient location to shopping, Tusculum College, Greeneville, and easy access to Johnson City</li>
           <li>Close access to Hospital and Medical</li>
           <li>An exact replica of Andrew Johnson's original Taylor Shop building is on the lot</li>
