--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>
           Bill Showalter<br>
           423.523.9059<br>
-          <a href="/" title="billshowalter.com">billshowalter.com</a><br>
+          <a href="//billshowalter.com" title="billshowalter.com">billshowalter.com</a><br>
           <script type="text/javascript" language="javascript">
           <!--
           // Email obfuscator script 2.1 by Tim Williams, University of Arizona
@@ -80,13 +80,13 @@
       <div class="gallery">
 
         <h2>Pictures <small><a href="https://app.box.com/s/tuddi220eo3d1lefowm7i3go7nghh49s" title="Full Resolution Pictures">download full&dash;resolution gallery</a></small></h2>
-        <img src="img/frontage-fall_c.jpg">
-        <img src="img/shop-summer_c.jpg">
-        <img src="img/shop-garden_c.jpg">
-        <img src="img/shop-spring_c.jpg">
-        <img src="img/shop-fall_c.jpg">
-        <img src="img/shop-winter_c.jpg">
-        <img src="img/map_c.jpg">
+        <img alt="Frontage" src="img/frontage-fall_c.jpg">
+        <img alt="Shop" src="img/shop-summer_c.jpg">
+        <img alt="Shop" src="img/shop-garden_c.jpg">
+        <img alt="Shop" src="img/shop-spring_c.jpg">
+        <img alt="Shop" src="img/shop-fall_c.jpg">
+        <img alt="Shop" src="img/shop-winter_c.jpg">
+        <img alt="Map" src="img/map_c.jpg">
 
       </div>
 
