Change the headline for real

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <body>
 
     <header>
-      <h1>lot for sale</h1>
-      <h4>Beautiful Choice Restricted Residential Building Site in Prime Greeneville Location</h4>
+      <h1>Choice Restricted Residential Building Site in Prime Greeneville Location</h1>
       <p><a href="//goo.gl/maps/ImGFH">101 Lexington Court Lot #13, Greeneville, TN 37745</a></p>
       <p><strong>$65,900</strong> &ndash; terms available</p>
     </header>
