Make client-directed changes to body copy
- Remove 'Lot #13' from Address

- Price should read '$69,500', not '$65,900'

- Change all instances of 'lot' to 'property'

- Clean up phrasing in a few 'About' bullet points

- Change 'building' to 'replica' in the heading about the Andrew Johnson
  replica

- Obfuscate phone number

- Remove 'download full-res' link

- Remove pictures 4-6

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
-    <title>101 Lexington Court Lot #13, Greeneville, TN 37745 - Lot For Sale</title>
+    <title>101 Lexington Court, Greeneville, TN 37745 - Lot For Sale</title>
 
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,700italic">
     <link rel="stylesheet" href="style.css">
@@ -15,38 +15,38 @@
 
     <header>
       <h1>Choice Restricted Residential Building Site in Prime Greeneville Location</h1>
-      <p><a href="//goo.gl/maps/ImGFH">101 Lexington Court Lot #13, Greeneville, TN 37745</a></p>
-      <p><strong>$65,900</strong> &ndash; terms available</p>
+      <p><a href="//goo.gl/maps/ImGFH">101 Lexington Court, Greeneville, TN 37745</a></p>
+      <p><strong>$69,500</strong> &ndash; terms available</p>
     </header>
 
     <main class="content">
 
       <div class="sidebar">
 
-        <h2>About The Lot</h2>
+        <h2>About The Property</h2>
         <ul>
-          <li>Corner lot &ndash; 158&prime; frontage on Old Shiloh Road, 203&prime; frontage on Lexington Ct.</li>
+          <li>Corner property &ndash; 158&prime; frontage on Old Shiloh Road, 203&prime; frontage on Lexington Ct.</li>
           <li>Almost an Acre (0.87 Ac.)</li>
           <li>In the Town of Greeneville, TN, with City Schools and City Services</li>
-          <li>Lot is level, fenced on the street frontage, and with basic landscaping on the lot</li>
+          <li>Property is level, fenced on the street frontage, and with basic landscaping</li>
           <li>Access now off short cul-de-sac (Lexington Ct.) with little traffic, or can be changed to Old Shiloh Rd. if desired</li>
           <li>Driveway and paved parking in place</li>
           <li>Underground utilities</li>
-          <li>Numerous mature trees are around the perimeter</li>
-          <li>Lot is restricted by <a href="ShilohViewCCRSales.pdf">Covenants, Condiditons, and Restrictions</a></li>
+          <li>Numerous mature trees around the perimeter</li>
+          <li>Property is restricted by <a href="ShilohViewCCRSales.pdf">Covenants, Condiditons, and Restrictions</a></li>
           <li>Convenient location to shopping, Tusculum College, Greeneville, and easy access to Johnson City</li>
           <li>Close access to Hospital and Medical</li>
           <li>An exact replica of Andrew Johnson's original Taylor Shop building is on the lot</li>
         </ul>
 
-        <h2>About The Andrew Johnson Taylor Shop Building</h2>
+        <h2>About The Andrew Johnson Taylor Shop Replica</h2>
         <p>This building was constructed in 1999 from plans of the restored taylor shop building at the Andrew Johnson visitor center in Greeneville. The building is 14&prime; &times; 21&prime; with a front and rear door, two windows in front, and one in rear. There is a wood burning fire place for heat, but no water or electricity. There are hand&dash;made windows with float glass, solid pine doors, hand&dash;forged iron hardware&mdash;all based on the original taylor shop construction.</p>
         <p>I used this shop for twelve years to build traditional 18<sup>th</sup> century American Windsor Chairs using the same designs, materials, tools, and construction methods of these period pieces.</p>
 
         <h2>For More Information</h2>
         <p>
           Bill Showalter<br>
-          423.523.9059<br>
+          &#52;&#50;&#51;&#46;&#53;&#50;&#51;&#46;&#57;&#48;&#53;&#57;<br>
           <a href="//billshowalter.com" title="billshowalter.com">billshowalter.com</a><br>
           <script type="text/javascript" language="javascript">
           <!--
@@ -78,13 +78,10 @@
 
       <div class="gallery">
 
-        <h2>Pictures <small><a href="https://app.box.com/s/tuddi220eo3d1lefowm7i3go7nghh49s" title="Full Resolution Pictures">download full&dash;resolution gallery</a></small></h2>
+        <h2>Pictures</h2> 
         <img alt="Frontage" src="img/frontage-fall_c.jpg">
         <img alt="Shop" src="img/shop-summer_c.jpg">
         <img alt="Shop" src="img/shop-garden_c.jpg">
-        <img alt="Shop" src="img/shop-spring_c.jpg">
-        <img alt="Shop" src="img/shop-fall_c.jpg">
-        <img alt="Shop" src="img/shop-winter_c.jpg">
         <img alt="Map" src="img/map_c.jpg">
 
       </div>
