--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li>Property is restricted by <a href="ShilohViewCCRSales.pdf">Covenants, Condiditons, and Restrictions</a></li>
           <li>Convenient location to shopping, Tusculum College, Greeneville, and easy access to Johnson City</li>
           <li>Close access to Hospital and Medical</li>
-          <li>An exact replica of Andrew Johnson's original Taylor Shop building is on the lot</li>
+          <li>An exact replica of Andrew Johnson's original Taylor Shop building is on the property</li>
         </ul>
 
         <h2>About The Andrew Johnson Taylor Shop Replica</h2>
