--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <h2>About The Property</h2>
         <ul>
-          <li>Corner property &ndash; 158&prime; frontage on Old Shiloh Road, 203&prime; frontage on Lexington Ct.</li>
+          <li>Corner lot &ndash; 158&prime; frontage on Old Shiloh Road, 203&prime; frontage on Lexington Ct.</li>
           <li>Almost an Acre (0.87 Ac.)</li>
           <li>In the Town of Greeneville, TN, with City Schools and City Services</li>
           <li>Property is level, fenced on the street frontage, and with basic landscaping</li>
@@ -36,11 +36,11 @@
           <li>Property is restricted by <a href="ShilohViewCCRSales.pdf">Covenants, Condiditons, and Restrictions</a></li>
           <li>Convenient location to shopping, Tusculum College, Greeneville, and easy access to Johnson City</li>
           <li>Close access to Hospital and Medical</li>
-          <li>An exact replica of Andrew Johnson's original Taylor Shop building is on the property</li>
+          <li>An exact replica of Andrew Johnson's original Tailor Shop building is on the lot</li>
         </ul>
 
         <h2>About The Andrew Johnson Taylor Shop Replica</h2>
-        <p>This building was constructed in 1999 from plans of the restored taylor shop building at the Andrew Johnson visitor center in Greeneville. The building is 14&prime; &times; 21&prime; with a front and rear door, two windows in front, and one in rear. There is a wood burning fire place for heat, but no water or electricity. There are hand&dash;made windows with float glass, solid pine doors, hand&dash;forged iron hardware&mdash;all based on the original taylor shop construction.</p>
+        <p>This building was constructed in 1999 from plans of the restored tailor shop building at the Andrew Johnson visitor center in Greeneville. The building is 14&prime; &times; 21&prime; with a front and rear door, two windows in front, and one in rear. There is a wood burning fire place for heat, but no water or electricity. There are hand&dash;made windows with float glass, solid pine doors, hand&dash;forged iron hardware&mdash;all based on the original tailor shop construction.</p>
         <p>I used this shop for twelve years to build traditional 18<sup>th</sup> century American Windsor Chairs using the same designs, materials, tools, and construction methods of these period pieces.</p>
 
         <h2>For More Information</h2>
