--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li>An exact replica of Andrew Johnson's original Tailor Shop building is on the lot</li>
         </ul>
 
-        <h2>About The Andrew Johnson Taylor Shop Replica</h2>
+        <h2>About The Andrew Johnson Tailor Shop Replica</h2>
         <p>This building was constructed in 1999 from plans of the restored tailor shop building at the Andrew Johnson visitor center in Greeneville. The building is 14&prime; &times; 21&prime; with a front and rear door, two windows in front, and one in rear. There is a wood burning fire place for heat, but no water or electricity. There are hand&dash;made windows with float glass, solid pine doors, hand&dash;forged iron hardware&mdash;all based on the original tailor shop construction.</p>
         <p>I used this shop for twelve years to build traditional 18<sup>th</sup> century American Windsor Chairs using the same designs, materials, tools, and construction methods of these period pieces.</p>
 
