--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <img alt="Frontage" src="img/frontage-fall_c.jpg">
         <img alt="Shop" src="img/shop-summer_c.jpg">
         <img alt="Shop" src="img/shop-garden_c.jpg">
-        <img alt="Map" src="img/map_c.jpg">
+        <img alt="Map" src="img/map-2.jpg">
 
       </div>
 
