--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <h2>About The Property</h2>
         <ul>
-          <li>Corner property &ndash; 158&prime; frontage on Old Shiloh Road, 203&prime; frontage on Lexington Ct.</li>
+          <li>Corner lot &ndash; 158&prime; frontage on Old Shiloh Road, 203&prime; frontage on Lexington Ct.</li>
           <li>Almost an Acre (0.87 Ac.)</li>
           <li>In the Town of Greeneville, TN, with City Schools and City Services</li>
           <li>Lot is level, fenced on the street frontage, and with basic landscaping</li>
