--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
-    <title>101 Lexington Court, Greeneville, TN 37745 - Lot For Sale</title>
+    <title>101 Lexington Court, Greeneville, TN 37745</title>
 
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,700italic">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700italic">
     <link rel="stylesheet" href="style.css">
   </head>
 
@@ -16,7 +16,7 @@
     <header>
       <h1>Choice Restricted Residential Building Site in Prime Greeneville Location</h1>
       <p><a href="//goo.gl/maps/ImGFH">101 Lexington Court, Greeneville, TN 37745</a></p>
-      <p><strong>$69,500</strong> &ndash; terms available</p>
+      <p><em>currently not for sale</em></p>
     </header>
 
     <main class="content">
@@ -33,7 +33,6 @@
           <li>Driveway and paved parking in place</li>
           <li>Underground utilities</li>
           <li>Numerous mature trees around the perimeter</li>
-          <li>Lot is restricted by <a href="ShilohViewCCRSales.pdf">Covenants, Condiditons, and Restrictions</a></li>
           <li>Convenient location to shopping, Tusculum College, Greeneville, and easy access to Johnson City</li>
           <li>Close access to Hospital and Medical</li>
           <li>An exact replica of Andrew Johnson's original Tailor Shop building is on the lot</li>
@@ -42,37 +41,6 @@
         <h2>About The Andrew Johnson Tailor Shop Replica</h2>
         <p>This building was constructed in 1999 from plans of the restored tailor shop building at the Andrew Johnson visitor center in Greeneville. The building is 14&prime; &times; 21&prime; with a front and rear door, two windows in front, and one in rear. There is a wood burning fire place for heat, but no water or electricity. There are hand&dash;made windows with float glass, solid pine doors, hand&dash;forged iron hardware&mdash;all based on the original tailor shop construction.</p>
         <p>I used this shop for twelve years to build traditional 18<sup>th</sup> century American Windsor Chairs using the same designs, materials, tools, and construction methods of these period pieces.</p>
-
-        <h2>For More Information</h2>
-        <p>
-          Bill Showalter<br>
-          &#52;&#50;&#51;&#46;&#53;&#50;&#51;&#46;&#57;&#48;&#53;&#57;<br>
-          <a href="//billshowalter.com" title="billshowalter.com">billshowalter.com</a><br>
-          <script type="text/javascript" language="javascript">
-          <!--
-          // Email obfuscator script 2.1 by Tim Williams, University of Arizona
-          // Random encryption key feature by Andrew Moulden, Site Engineering Ltd
-          // This code is freeware provided these four comment lines remain intact
-          // A wizard to generate this code is at http://www.jottings.com/obfuscator/
-          { coded = "isvB1s.zvp5.B12@UVevB.81V"
-            key = "ZHkoa5KMgYyvxqEtQ6m8n4JsATfS1ePGIUluzrjF2bwVdL3OiXC09RpNcDWBh7"
-            shift=coded.length
-            link=""
-            for (i=0; i<coded.length; i++) {
-              if (key.indexOf(coded.charAt(i))==-1) {
-                ltr = coded.charAt(i)
-                link += (ltr)
-              }
-              else {     
-                ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
-                link += (key.charAt(ltr))
-              }
-            }
-          document.write("<a href='mailto:"+link+"'>"+link+"</a>")
-          }
-          //-->
-          </script><noscript>Sorry, you need Javascript on to email me.</noscript>
-        </p>
 
       </div>
 
@@ -89,7 +57,7 @@
     </main>
 
     <footer>
-      <p>Designed by <a href="//www.orangedaisy.co">orange daisy</a></p>
+      <p>Crafted by <a href="//www.orangedaisy.co">orange daisy</a></p>
     </footer>
 
   </body>
